force-app/main/default/objects/Project_Roles__c/Project_Roles__c.object-meta.xml
<CustomObject>
    <description>Salesforce project roles of contacts.</description>
    <label>Project Roles</label>
    <nameField>
        <displayFormat>PR-{00000}</displayFormat>
        <label>Project Role Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Roles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>