force-app/main/default/objects/Project_Roles__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <description>Lookup from Project Roles to Contact object</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Project Roles</relationshipLabel>
    <relationshipName>Project_Roles</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>