force-app/main/default/objects/Project_Roles__c/fields/Current_Project__c.field-meta.xml
<CustomField>
    <fullName>Current_Project__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if this is the user&apos;s current project role</description>
    <label>Current Project</label>
    <type>Checkbox</type>
</CustomField>