force-app/main/default/objects/Project_Roles__c/fields/Project_Role__c.field-meta.xml
<CustomField>
    <fullName>Project_Role__c</fullName>
    <description>Select Roles for which you are qualified (You&apos;ll CRUSH it!) and those Roles you could be successful in with some mentoring.</description>
    <inlineHelpText>Select Roles for which you are qualified (You&apos;ll CRUSH it!) and those Roles you could be successful in with some mentoring.</inlineHelpText>
    <label>Project Role</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Admin</fullName>
            </value>
            <value>
                <fullName>Advanced Admin</fullName>
            </value>
            <value>
                <fullName>Solution Architect</fullName>
            </value>
            <value>
                <fullName>Developer (Junior)</fullName>
            </value>
            <value>
                <fullName>Developer (Mid)</fullName>
            </value>
            <value>
                <fullName>Developer (Senior/Lead)</fullName>
            </value>
            <value>
                <fullName>Technical Architect</fullName>
            </value>
            <value>
                <fullName>Quality Assurance (Junior)</fullName>
            </value>
            <value>
                <fullName>Quality Assurance (Mid)</fullName>
            </value>
            <value>
                <fullName>Quality Assurance (Senior/Lead)</fullName>
            </value>
            <value>
                <fullName>BA (Junior)</fullName>
            </value>
            <value>
                <fullName>BA (Mid)</fullName>
            </value>
            <value>
                <fullName>BA (Senior/Lead)</fullName>
            </value>
            <value>
                <fullName>Release Manager</fullName>
            </value>
            <value>
                <fullName>Scrum Master</fullName>
            </value>
            <value>
                <fullName>Project Manager</fullName>
            </value>
            <value>
                <fullName>Portfolio Manager</fullName>
            </value>
            <value>
                <fullName>Tech Support</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>