force-app/main/default/objects/Project_Roles__c/listViews/All_Project_Roles.listView-meta.xml
<ListView>
    <fullName>All_Project_Roles</fullName>
    <columns>NAME</columns>
    <columns>Project_Role__c</columns>
    <columns>Contact__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Project Roles</label>
</ListView>