force-app/main/default/objects/Project_Roles__c/listViews/Project_Lead.listView-meta.xml
<ListView>
    <fullName>Project_Lead</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Project_Role__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Project_Role__c</field>
        <operation>equals</operation>
        <value>Solution Architect,Technical Architect,Scrum Master,Project Manager</value>
    </filters>
    <label>Project Lead</label>
</ListView>